# matita

./: .gitignore  Cargo.toml  README.md  build.rs  devenv.nix
proto/matita/: matita.proto
src/: main.rs  parser.rs  query.rs  server.rs
